# jimeng-mcp-server

./: .env.example  .gitignore  README.md  claude_desktop_config.json  mcp.txt  pyproject.toml
src/jimeng_mcp/: __init__.py  server.py
tests/: example_client.py  test_api.py  test_modes.py  test_remote_service.py  test_server.py  test_setup.py  test_working_model.py
