[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jimeng-mcp"
version = "0.1.0"
description = "MCP server for JiMeng AI image and video generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=1.6.1",
    "httpx-sse>=0.4",
]

[project.scripts]
jimeng-mcp = "jimeng_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
sse = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
]
http = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
]
all = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
